--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: coupon_map_final
+name: lacoupong
 description: A new Flutter project.
 publish_to: 'none'
 version: 1.0.0+1
@@ -18,6 +18,7 @@ dependencies:
   path_provider: ^2.1.3
   share_plus: ^7.2.2
   http: ^1.2.0
+  
 
   # --- วิธีแก้ปัญหา screenshot ---
   screenshot:
@@ -31,6 +32,17 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
+  change_app_package_name: ^1.5.0
+  flutter_launcher_icons: ^0.14.1
+  lottie: ^3.1.2
+
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/animations/ # เพิ่มบรรทัดนี้
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/iconpaihaisuth.jpg"
